# zerodb

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  zerodb-design.md  zerodb-todo.md  zeroql-syntax-old.md  zeroql-syntax.md
.github/workflows/: coverage.yml  tests_and_checks.yml
component/client/: Cargo.toml
component/host/: Cargo.toml
components/zerosys-db/client/: Cargo.toml
components/zerosys-db/host/: Cargo.toml
components/zerosys-db/wit/: query.wit  types.wit  world.wit
examples/: syntax.md
zerodb/: Cargo.toml
zerodb-cli/: Cargo.toml
zerodb-cli/src/: args.rs  error.rs
zerodb/src/: client.rs  command.rs  db.rs  error.rs  errors.rs  init.rs  lib.rs  node.rs  query.rs
zerodb/src/client/: manager.rs  mod.rs
zerodb/src/compiler/: mod.rs
zerodb/src/compiler/parser/: parser.rs  syntax.grammar
zerodb/src/config/: config.rs  config_zerodb.rs  default.rs  defaults.rs  mod.rs
zerodb/src/configs/: config_zerodb.rs  defaults.rs  mod.rs
zerodb/src/message/: mod.rs  ping.rs
zerodb/src/node/: builder.rs  mod.rs  node.rs  query.rs
zerodb/src/peer/: manager.rs  mod.rs
zerodb/src/raft/: client.rs  default.rs  log.rs  mod.rs  node.rs  request.rs  rpc.rs  timeouts.rs
zerodb/src/raft/node/: builder.rs  mod.rs  node.rs
zerodb/src/raft/node/task/: candidate.rs  follower.rs  state.rs
zerodb/src/service/: _builder.rs  builder.rs  mod.rs  server.rs  service.rs
zerodb/src/store/: memstate.rs  memstore.rs  mod.rs
zerodb/src/stores/: memstore.rs  mod.rs
zerodb/src/util/: connection.rs  mod.rs
zerodb/src/utils/: mock.rs  mod.rs
zerodb/tests/: peer.rs  test_cluster.rs  test_single.rs
zerodb/tests/fixtures/: cluster.rs  server.rs
zeroql/: Cargo.toml  README.md
zeroql-cli/: Cargo.toml
zeroql-cli/src/: lib.rs
zeroql-macros/: Cargo.toml
zeroql-macros/core/: Cargo.toml
zeroql-macros/core/src/: backtrack.rs  lib.rs  memoize.rs  utils.rs
zeroql-macros/src/: anykey.rs  cache.rs  lib.rs
zeroql-macros/tests/: 01-memoize-pass.rs  02-backtrack-pass.rs  03-memoize-and-backtrack-pass.rs  04-memoize-skip-pass.rs
zeroql/examples/: ast.rs  sema.rs
zeroql/src/: error.rs  lib.rs
zeroql/src/ast/: ast.rs  mod.rs
zeroql/src/compiler/: mod.rs  reversible.rs
zeroql/src/compiler/ast/: ast.rs  mod.rs  tag.rs
zeroql/src/compiler/lexer/: errors.rs  lexer.grammar  lexer.rs  lexer2.grammar  mod.rs  tests.rs  token.rs
zeroql/src/compiler/parser/: capture.rs  combinator.rs  errors.rs  mod.rs  parse_basic.rs  parse_expressions.rs  parse_keywords.rs  parse_literals.rs  parse_meta.rs  parse_operations.rs  parse_operators.rs  parse_statements.rs  parser.gramamar  parser.grammar  parser.rs  parser2.gramamar  tests.rs
zeroql/src/compiler/parser/combinator/: combinator.rs  mod.rs  tests.rs
zeroql/src/compiler/parser/tests/: basic.rs  expressions.rs  keywords.rs  literals.rs  meta.rs  mod.rs  operations.rs  operators.rs  statements.rs
zeroql/src/compiler/sema/: error.rs  mod.rs  schema.rs  sema.rs  symbols.rs
zeroql/src/compiler/sema/pass/: member_resolution.rs  mod.rs  name_resolution.rs  type_checking.rs  type_inference.rs
zeroql/src/lexer/: errors.rs  lexer.grammar  lexer.rs  mod.rs  tests.rs  token.rs
zeroql/src/lsp/: mod.rs  server.rs
zeroql/src/parser/: errors.rs  mod.rs  parser.grammar  parser.rs
zeroraft/: Cargo.toml
zeroraft/src/: builder.rs  channels.rs  command.rs  default.rs  errors.rs  lib.rs  log.rs  mod.rs  node.rs  request.rs  response.rs  snapshot.rs  store.rs  timeout.rs
zeroraft/src/node/: builder.rs  channels.rs  countdown.rs  mod.rs  node.rs
zeroraft/src/node/task/: candidate.rs  follower.rs  leader.rs  mod.rs
zeroraft/src/roles/: common.rs  role_candidate.rs  role_follower.rs  role_leader.rs
zeroraft/src/task/: candidate.rs  common.rs  follower.rs  leader.rs  mod.rs
zeroraft/src/utils/: mock.rs
zeroraft/tests/: test_cluster.rs  test_election.rs  test_lifecycle.rs  test_single.rs
zeroraft/tests/fixtures/: cluster.rs  mod.rs  server.rs  store.rs
