[workspace]
members = [
    "component/client",
    "component/host",
    "zerodb",
    "zerodb-cli",
    "zeroql",
    "zeroql-cli",
    # "examples/*",
]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/zerocore-ai/zerodb"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.8", features = ["derive", "color"] }
futures = "0.3.30"
serde = { version = "1.0.194", features = ["derive"] }
structstruck = "0.4.1"
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "net"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
typed-builder = "0.18.0"
zerodb = { path = "zerodb" }
zeroql = { path = "zeroql" }
