[workspace]
members = ["zerodb", "zerodb-cli", "zeroql", "zeroql-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/zerocore-ai/zerodb"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.79"
cbor4ii = { version = "0.3.2", features = ["serde1"] }
clap = { version = "4.4.8", features = ["derive", "color"] }
itertools = "0.13.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.194", features = ["derive"] }
structstruck = "0.4.1"
test-log = { version = "0.2.14", features = ["trace"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
typed-builder = "0.18.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
zerodb = { path = "zerodb" }
zeroraft = { path = "../zeroraft/zeroraft" }
zeroutils-did = { path = "../zeroutils/zeroutils-did" }
zeroutils-config = { path = "../zeroutils/zeroutils-config" }
zeroutils-path = { path = "../zeroutils/zeroutils-path" }
zeroql-macros = { path = "zeroql-macros" }
parking_lot = "0.12.3"
