[package]
name = "zerodb-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "zerodb"
path = "bin/zerodb.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
zerodb.workspace = true
