[package]
name = "zerodb"
description = "A multi-model database query engine for multi-tenant applications"
keywords = []
categories = []
documentation = "https://docs.rs/zerodb"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
cbor4ii = { version = "0.3.2", features = ["serde1"] }
futures.workspace = true
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-util = { version = "0.1.2", features = ["full", "tokio"] }
rand.workspace = true
serde.workspace = true
static_init = "1.0.3"
structstruck.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
typed-builder.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
proptest.workspace = true
rstest.workspace = true
