[package]
name = "zerodb"
description = "A multi-model database query engine for multi-tenant applications"
keywords = []
categories = []
documentation = "https://docs.rs/zerodb"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cbor4ii = { version = "0.3.2", features = ["serde1"] }
futures.workspace = true
hyper = "1.1.0"
rand.workspace = true
serde.workspace = true
structstruck.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
typed-builder.workspace = true
uuid.workspace = true
zeroraft.workspace = true

[dev-dependencies]
anyhow.workspace = true
