[package]
name = "zerodb"
description = "A multi-model database query engine for multi-tenant applications"
keywords = []
categories = []
documentation = "https://docs.rs/zerodb"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cbor4ii.workspace = true
hyper = "1.1.0"
rand.workspace = true
serde.workspace = true
structstruck.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
typed-builder.workspace = true
uuid.workspace = true
zeroraft.workspace = true
zeroutils-config.workspace = true
anyhow.workspace = true
logos = "0.14.0"
zeroutils-did.workspace = true
