[package]
name = "zeroql-macros"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lru = "0.12.3"
sha3 = "0.10.8"
zeroql-macros-core = { path = "./core" }

[dev-dependencies]
rand.workspace = true
trybuild = "1.0.91"
