[package]
name = "zeroql-macros"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
lru = "0.12.3"
sha3 = "0.10.8"
tracing.workspace = true
tracing-subscriber.workspace = true
zeroql-macros-core = { path = "./core" }

[dev-dependencies]
rand.workspace = true
regex = "1.10.4"
trybuild = "1.0.91"
