[package]
name = "zeroql"
description = "A multi-paradigm query language for multi-model databases"
keywords = []
categories = []
documentation = "https://docs.rs/zeroql"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
zeroql-macros.workspace = true
lru = "0.12.3"
regex.workspace = true
lazy_static = "1.4.0"
bitflags = "2.6.0"
