[package]
name = "zeroraft"
description = "Extended Raft implementation for the Zerocore project"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cbor4ii = { version = "0.3.2", features = ["serde1"] }
futures.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
test-log.workspace = true
